# logos

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  THIRD-PARTY-NOTICES.md  VERSIONS  deny.toml  dist-workspace.toml
agent-core/: Cargo.toml
agent-core/src/: lib.rs  mock.rs  provider.rs  provider_error.rs  retry.rs
agent-core/src/tools/: budget.rs  governance.rs  graph.rs  mod.rs  source.rs
agent-core/tests/: carve_out.rs  graph_governance_tools.rs  mock.rs  partition.rs  providers.rs  sandbox.rs  zero_egress.rs
chat-agent/: Cargo.toml
chat-agent/src/: db.rs  lib.rs  memory.rs
chat-agent/src/orchestrator/: budget.rs  event.rs  mod.rs  plan.rs  planner.rs  roster.rs  step.rs
chat-agent/tests/: composition.rs  cross_step_degradation.rs  fault_resilience.rs  memory.rs  no_embeddings.rs  orchestrator.rs  roster.rs  soft_cap.rs  store.rs
cli/: Cargo.toml
cli/src/: dispatch.rs  main.rs  workspace_init.rs  xservice.rs
cli/tests/: cli_surface.rs  init_workspace.rs  line_budget.rs  stdout_safety.rs  xservice_surface.rs
logos-core/: Cargo.toml
logos-core/plugins/c/: plugin.toml
logos-core/plugins/c-sharp/: plugin.toml
logos-core/plugins/c-sharp/queries/: frameworks.scm  references.scm  smells.scm  symbols.scm
logos-core/plugins/c/queries/: references.scm  symbols.scm
logos-core/plugins/cpp/: plugin.toml
logos-core/plugins/cpp/queries/: references.scm  smells.scm  symbols.scm
logos-core/plugins/dockerfile/: plugin.toml
logos-core/plugins/go/: plugin.toml
logos-core/plugins/go/queries/: smells.scm  (+3 more)
logos-core/plugins/graphql/: plugin.toml
logos-core/plugins/java/: plugin.toml
logos-core/plugins/json/: plugin.toml
logos-core/plugins/kotlin/: plugin.toml
logos-core/plugins/makefile/: plugin.toml
logos-core/plugins/markdown/: plugin.toml
logos-core/plugins/php/: plugin.toml
logos-core/plugins/protobuf/: plugin.toml
logos-core/plugins/python/: plugin.toml
logos-core/plugins/ruby/: plugin.toml
logos-core/plugins/rust/: plugin.toml
logos-core/plugins/scala/: plugin.toml
logos-core/plugins/shell/: plugin.toml
logos-core/plugins/sql/: plugin.toml
logos-core/plugins/terraform/: plugin.toml
logos-core/plugins/toml/: plugin.toml
logos-core/plugins/tsx/: plugin.toml
logos-core/plugins/typescript/: plugin.toml
logos-core/plugins/yaml/: plugin.toml
logos-core/src/: engine.rs  error.rs  lib.rs  perf.rs  workspace.rs
logos-core/src/annotate/: clone.rs  mod.rs  tests.rs
logos-core/src/config/: admission.rs  chat.rs  discovery.rs  error.rs  globs.rs  mod.rs  rules.rs  secrets.rs  settings.rs  wiki.rs  writeback.rs
logos-core/src/extract/: broker.rs  complexity.rs  config.rs  doc.rs  mod.rs  nesting.rs  refs.rs  shape.rs  shingle.rs  symbol.rs  testmarker.rs  tests.rs
logos-core/src/federation/: bridge.rs  broker.rs  coverage.rs  enable.rs  governance.rs  manifest.rs  mod.rs  query.rs  reach.rs  registry.rs  topics.rs
logos-core/src/governance/: mod.rs  smells.rs  tests.rs
logos-core/src/graph_store/: migrate.rs  mod.rs  schema.rs  tests.rs
logos-core/src/history/: db.rs  hotspot.rs  miner.rs  mod.rs  temporal.rs  tests.rs
logos-core/src/hooks/: mod.rs  tests.rs
logos-core/src/hydrate/: cache.rs  mod.rs  tests.rs  view.rs
logos-core/src/init/: mod.rs
logos-core/src/metrics/: extended.rs  mod.rs  tests.rs
logos-core/src/model/: annotations.rs  artifact.rs  convert.rs  kinds.rs  mod.rs  symbol.rs
logos-core/src/models/: mod.rs  navigation.rs  pipeline.rs  quality.rs
logos-core/src/navigate/: mod.rs  tests.rs
logos-core/src/observability/: db.rs  layer.rs  mod.rs  stats.rs  tests.rs
logos-core/src/pipeline/: mod.rs  tests.rs
logos-core/src/plugin/: abi.rs  error.rs  grammars.rs  manifest.rs  mod.rs  plugin.rs  queries.rs  registry.rs
logos-core/src/resolve/: binder.rs  dispatch.rs  framework.rs  grpc_key.rs  http_client_call.rs  mod.rs  route_template.rs  tests.rs  topics.rs
logos-core/src/runtime/: mod.rs  reader.rs  tests.rs  writer.rs
logos-core/src/watch/: mod.rs  tests.rs
logos-core/src/wiki/: db.rs  hook.rs  mod.rs  native.rs  present.rs  skill.rs  tests.rs
logos-core/tests/: admission_convergence.rs  annotation.rs  broker_topic_promotion.rs  build_formats.rs  c_honesty.rs  config_apply.rs  config_loading.rs  config_reconciliation.rs  coverage_cross.rs  coverage_surface.rs  cpp_plugin.rs  data_formats.rs  dispatch_live_rooting.rs  doc_resolution.rs  documentation.rs  extraction.rs  framework_extraction.rs  git_hooks.rs  golden_signal.rs  governance.rs  graph_elements.rs  graph_hydration.rs  graph_revision.rs  hotspots.rs  indexing.rs  init.rs  macro_arg_binding.rs  metrics.rs  multilang.rs  nav_prologue_purge.rs  navigation.rs  no_network_deps.rs  observability.rs  openapi.rs  openapi_route_binding.rs  perf_envelope.rs  plugin_registry.rs  read_only_accessors.rs  resolution.rs  runtime_concurrency.rs  (+16 more)
logos-core/tests/golden/: cross_target_signal.json
mcp/: Cargo.toml
mcp/src/: instructions.md  lib.rs  server.rs
mcp/tests/: coverage_parity.rs  hotspots_parity.rs  line_budget.rs  protocol.rs  stdout_safety.rs  wiki_parity.rs  xservice_roster.rs
web/: Cargo.toml
web/assets/: VENDOR.md  chat.js  config-editor.js  graph.js  logos.css  mermaid-init.js  nav-progress.js  quadrant.js
web/src/: api_v1.rs  components.rs  lib.rs  markdown.rs  member.rs  query.rs  spa.rs  wiki.rs
web/src/chat/: configured.rs  mod.rs
web/src/wikigen/: configured.rs  mod.rs
web/tests/: api_v1.rs  carve_out.rs  chat_sse.rs  read_only_views.rs  spa_bundle.rs  spa_design_system.rs  spa_shell.rs  uat_ui_06.rs  uat_ui_07.rs  uat_wk_06.rs  verify_endpoint.rs  wiki_sse.rs  workspace_api.rs
web/ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/ui/public/: theme-init.js
web/ui/src/: App.test.tsx  App.tsx  App.workspace.test.tsx  intent.ts  main.tsx  nav.test.ts  nav.ts  router.test.ts  router.tsx
wiki-agent/: Cargo.toml
wiki-agent/src/: agent.rs  configured.rs  grounding.rs  lib.rs
wiki-agent/tests/: carve_out.rs  generation.rs
(+229 files in other folders)
