[workspace]
# resolver = "2" enables the v2 feature resolver, which correctly handles
# feature unification across the workspace (ADR-01, NFR-PC-01).
resolver = "2"
members = [
    "logos-core",
    "cli",
    "mcp",
    # The feature-gated web adapter (CR-012, ADR-27). A workspace member so its
    # tests run with `cargo test --workspace`; it links into the `logos` binary
    # only under cli's non-default `ui` feature, so its axum/hyper stack never
    # enters the default-feature tree the no-network fitness test guards.
    "web",
    # The ui-gated rig agent substrate (CR-046/CR-047, ADR-41/ADR-42). A
    # workspace member so its tests run with `cargo test --workspace`; it
    # reaches the `logos` binary only through `web` (itself ui-only), so `rig`
    # and its `reqwest` HTTP client never enter the default-feature tree the
    # no-network fitness test guards (NFR-SE-01, ADR-40).
    "agent-core",
    # The ui-gated chat-agent component (CR-045/CR-046, ADR-40/ADR-41): the
    # conversation store (`.logos/chat.db`, S-168) now, the planner/subagent
    # orchestrator later. A workspace member so its tests run with `cargo test
    # --workspace`; it reaches the `logos` binary only through `web` (itself
    # ui-only), so it never enters the default-feature tree the no-network
    # fitness test guards, and removing `--features ui` yields no `chat.db`
    # (NFR-SE-01, ADR-40 reversibility).
    "chat-agent",
    # The ui-gated wiki-agent component (CR-047, ADR-42): the single-purpose,
    # queue-driven in-process wiki generation loop on the shared `agent-core`
    # substrate. A workspace member so its tests run with `cargo test
    # --workspace`; it reaches the `logos` binary only through `web` (itself
    # ui-only), so `rig` and its `reqwest` HTTP client never enter the
    # default-feature tree the no-network fitness test guards, and removing
    # `--features ui` yields today's offline binary with no in-process wiki
    # generation (NFR-SE-01, ADR-40 reversibility).
    "wiki-agent",
]

# Shared package metadata — inherited via `license.workspace = true`. Logos
# ships under Apache-2.0 as license-clean public OSS (NFR-CR-01, ADR-16);
# declaring it once here keeps every workspace crate consistent and satisfies
# the cargo-deny license gate (deny.toml). `repository` feeds the cargo-dist
# release pipeline (S-023, FR-DS-01): artifact URLs, the Homebrew formula,
# and the shell-installer download base all derive from it.
[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/raffaelecamanzo/logos"

# ── Release profile (ADR-16 fitness note, NFR-PC-04) ─────────────────────────
# The ≤50 MB default-binary budget is met with thin LTO + single codegen unit
# + symbol stripping. cargo-dist's `dist` profile (below) inherits this, so a
# local `cargo build --release` measures the same artifact shape CI ships.
[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile cargo-dist builds release artifacts with (generated by
# `dist init`, kept thin: everything real lives in [profile.release]).
[profile.dist]
inherits = "release"

# Shared dependency versions — all crates inherit from here.
[workspace.dependencies]
anyhow    = "1"
clap      = { version = "4", features = ["derive"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
# Test-only: throwaway directories for config/discovery fixtures (dev-dependency
# only — never enters the shipped binary graph).
tempfile  = "3"
# SCIP symbol codec (rust-protobuf). Pinned to the ~0.7.x lineage per ADR-06;
# confined behind logos-core's `model::convert` seam (NFR-MA-07). Do NOT bump
# the major/minor without re-validating the round-trip golden test and the
# convert seam — the protobuf ABI can shift between versions (AR-07).
scip      = "0.7"
# Configuration: human-editable checked-in policy files (S-006, ADR-15).
toml      = "0.8"
# Glob compilation for include/exclude + layer globs (config component).
globset   = "0.4"
# gitignore-aware, symlink-contained discovery walk (FR-IX-02, NFR-SE-04).
# Pulls in globset/walkdir/regex transitively — no socket/HTTP crate enters the
# graph (verified by the no-network fitness test, NFR-SE-01).
ignore    = "0.4"
# Anchored fix-commit message matching for the defect-history heuristic (S-047,
# FR-GH-05). Already in the graph transitively (via `ignore`/`globset`), so
# making it a *direct* dependency adds no new crate to the binary — it just names
# what we use. Pure in-process matcher, no socket surface (NFR-SE-01, kept honest
# by the no-network fitness test); MIT/Apache-2.0 satisfies the license gate.
regex     = "1"
# Data-parallel extraction (S-007, FR-IX-03, NFR-PE-08) and execution-runtime
# CPU worker pool (S-008, AQ-04). One shared pool. `crossbeam-channel` provides
# the bounded mpmc job/connection queues (S-008, ADR-02/03, §7.2). Both are
# pure in-process concurrency primitives — no socket (NFR-SE-01), MIT/Apache-2.0.
rayon             = "1"
crossbeam-channel = "0.5"
# Derived, in-memory graph for whole-graph algorithms — tarjan_scc / condensation
# / toposort (S-009, ADR-05, graph-hydration component). petgraph is the *derived*
# view; SQLite stays canonical and the petgraph is rebuildable/ephemeral. Pure
# in-process data structure (pulls fixedbitset/indexmap, no socket — NFR-SE-01),
# MIT/Apache-2.0. Confined to logos-core's `hydrate` module behind the
# `GraphView` seam (NFR-MA-07-style containment: no petgraph type crosses the
# Engine's read-model boundary).
petgraph          = "0.6"
# Content hashing for incremental-sync dirty detection (S-010, FR-SY-03). A pure
# in-memory hash with no socket surface (NFR-SE-01, kept honest by the no-network
# fitness test). Licensed `CC0-1.0 OR Apache-2.0`; the Apache-2.0 term satisfies
# the permissive-only license gate (deny.toml, NFR-CR-01).
blake3            = "1"
# Calendar-aware date arithmetic for the HEAD-anchored history window (S-046,
# FR-GH-03, ADR-22, history-engine component). We request only `std` (not
# `clock`); the `history` module computes the window cutoff purely from the HEAD
# committer timestamp via `DateTime::from_timestamp` + `checked_sub_months` in
# UTC and never calls `Utc::now` — that is the BR-27 determinism boundary,
# enforced by code + the byte-identical golden, NOT by the feature graph (a
# transitive crate may still unify `chrono/now` on; our determinism does not
# depend on its absence). Pure in-process date math, no socket surface
# (NFR-SE-01); MIT/Apache-2.0 satisfies the permissive license gate.
chrono            = { version = "0.4", default-features = false, features = ["std"] }
# Cobertura XML coverage-report parsing (S-049, FR-CV-01, ADR-23, history-engine
# coverage module). A pure-Rust streaming XML pull-parser confined to
# `history::coverage::parse` — no socket/HTTP surface (NFR-SE-01, kept honest by
# the no-network fitness test); pulls only `memchr`, already in the graph via
# `ignore`/`regex`. MIT-licensed, satisfying the permissive-only gate (deny.toml,
# NFR-CR-01). Chosen over hand-rolling XML so malformed-report rejection
# (FR-CV-01 atomic-rejection) leans on a real parser's entity/quoting/CDATA
# handling rather than a bespoke scanner.
quick-xml         = "0.37"
# Debounced filesystem watcher hosted under `serve --mcp` (S-022, FR-SY-04,
# ADR-02, filesystem-watcher integration). `notify` wraps the OS facilities
# (FSEvents/inotify/kqueue/ReadDirectoryChanges) and `notify-debouncer-full`
# coalesces an edit storm into one debounced batch — both pinned to the stable
# 8.x/0.5.x pair. Local OS notification only — no socket/HTTP crate enters the
# graph (NFR-SE-01, kept honest by the no-network fitness test). notify is
# CC0-1.0 (allowlisted in deny.toml); the debouncer is MIT/Apache-2.0.
notify                = "8"
notify-debouncer-full = "0.5"
# Canonical SQLite graph store (ADR-05, graph-store component). The `bundled`
# feature statically compiles SQLite (FTS5 included) into the binary, so there
# is no system-SQLite dependency and the single-static-binary constraint
# (NFR-PC-01) holds. No socket/HTTP crate enters the graph via rusqlite — the
# no-network fitness test (tests/no_network_deps.rs) keeps that honest.
rusqlite  = { version = "0.40", features = ["bundled"] }
# Official Rust MCP SDK, pinned 1.x (S-017, ADR-13, mcp-surface component).
# `server` + `transport-io` give the stdio JSON-RPC server; `macros` gives
# #[tool]/#[tool_router] registration. stdio transport only — no HTTP feature
# is enabled, so no socket/TLS crate enters the graph (NFR-SE-01, kept honest
# by the no-network fitness test).
rmcp      = { version = "1", default-features = false, features = ["server", "transport-io", "macros"] }
# Async runtime for MCP I/O ONLY (ADR-03): the mcp crate owns a current-thread
# runtime for JSON-RPC framing and bridges to the synchronous core via
# spawn_blocking — tokio never enters logos-core.
tokio     = { version = "1", default-features = false }
# The single observability emission seam (S-017/S-019, ADR-13, NFR-OO-01):
# every api entrypoint and pipeline pass emits `tracing` spans/events; nothing
# logs directly. `tracing-subscriber` hosts the two consuming layers — the fmt
# layer rendering human logs to stderr ONLY (NFR-RA-01) and the custom
# telemetry Layer persisting to telemetry.db (FR-OB-03). `env-filter` honours
# RUST_LOG (FR-OB-02). Pure in-process instrumentation — no socket/HTTP
# surface (NFR-SE-01, kept honest by the no-network fitness test), MIT.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# The tree-sitter runtime and the grammar parse tables are generated C compiled
# by `cc`, which inherits the active profile's opt-level — at `-O0` the
# query-compile path is ~5-10× slower, and with the full S-015 grammar set
# (6 grammars × 3 queries compiled at registry load) a *debug* cold start blows
# the NFR-PE-05 ≤200ms budget that the *release* profile meets with ~10×
# headroom. Optimising just these leaf C packages in dev keeps the budget test
# honest in both profiles without touching the budget itself; debuggability of
# workspace code is unaffected.
[profile.dev.package.tree-sitter]
opt-level = 2
[profile.dev.package.tree-sitter-rust]
opt-level = 2
[profile.dev.package.tree-sitter-python]
opt-level = 2
[profile.dev.package.tree-sitter-typescript]
opt-level = 2
[profile.dev.package.tree-sitter-go]
opt-level = 2
[profile.dev.package.tree-sitter-java]
opt-level = 2
# C language grammar (S-056, CR-009) — same leaf-C opt-level tuning so a debug
# build's registry-load cold start stays within the NFR-PE-05 budget.
[profile.dev.package.tree-sitter-c]
opt-level = 2
# C# grammar (S-057, CR-009) — same leaf-C opt-level tuning so a debug build's
# registry-load cold start stays within the NFR-PE-05 budget.
[profile.dev.package.tree-sitter-c-sharp]
opt-level = 2
# Scala (S-061, CR-009) — the heaviest code grammar of the language-breadth set;
# the same leaf-C opt-level override keeps a debug build's registry-load cold
# start within the NFR-PE-05 budget.
[profile.dev.package.tree-sitter-scala]
opt-level = 2
[profile.dev.package.tree-sitter-md]
opt-level = 2
# The S-063 config/artifact data-format grammars — same leaf-C opt-level tuning
# so a debug build's registry-load cold start stays within the NFR-PE-05 budget.
[profile.dev.package.tree-sitter-json]
opt-level = 2
[profile.dev.package.tree-sitter-yaml]
opt-level = 2
[profile.dev.package.tree-sitter-toml-ng]
opt-level = 2
# Schema-format artifact grammars (S-065, CR-010). Same debug opt-level override
# as the other grammar crates: cc inherits the profile opt-level, and at -O0 the
# query/parse path is slow enough to threaten the NFR-PE-05 cold-start budget on
# the lang-all fitness build that links these.
[profile.dev.package.tree-sitter-proto]
opt-level = 2
[profile.dev.package.tree-sitter-graphql]
opt-level = 2
# Infra-format artifact grammars (S-066, CR-010). Same leaf-C opt-level tuning so
# the lang-all debug fitness build's cold start stays within the NFR-PE-05 budget.
[profile.dev.package.tree-sitter-hcl]
opt-level = 2
[profile.dev.package.tree-sitter-sequel]
opt-level = 2
