[package]
# Package name == the distributed app name: cargo-dist derives artifact names
# (logos-<target>.tar.xz), the Homebrew formula (logos.rb → `brew install
# <tap>/logos`, FR-IN-05), and the installer URL from it. The directory stays
# `cli/` (the adapter role, ADR-01); only the package identity is `logos`.
name    = "logos"
version = "1.1.0"
edition = "2021"
description = "Logos — structural code intelligence for AI-assisted development"
license.workspace = true
repository.workspace = true
# The Homebrew formula's homepage field (cargo-dist publish-jobs).
homepage = "https://github.com/raffaelecamanzo/logos"
# Internal workspace crate — never published to crates.io. It builds the single
# distributed `logos` binary (ADR-16).
publish = false

# cargo-dist (S-023, FR-DS-01, ADR-16): this is the one distributed package —
# `publish = false` keeps it off crates.io, so dist needs the explicit opt-in.
[package.metadata.dist]
dist = true
# `ui` joined the default feature set below (S-287, CR-078/ADR-60), so the
# `features = ["ui"]` opt-in that used to live here is redundant — a plain
# `cargo build`/`cargo install` already ships the dashboard. Release artifacts
# instead enable `agents`, the strict superset that additionally turns on the
# chat + in-app wiki-generation agent surface (`rig`/`reqwest`), so the shipped
# binary keeps both the dashboard and chat/wiki generation (FR-DS-01) exactly
# as before CR-078 carved the egress client out of `ui`.
features = ["agents"]

# The single `logos` binary target (ADR-16, NFR-PC-01).
[[bin]]
name = "logos"
path = "src/main.rs"

[features]
# The shipped binary carries the five v1 grammars by default (FR-PL-01),
# matching logos-core's own default since S-015. `lang-rust` remains for slim
# development builds (`--no-default-features --features lang-rust`). Feature
# lines forward to BOTH paths into logos-core (direct and via mcp) so the
# grammar set unifies regardless of which seam pulls it in.
#
# `ui` joined the default set (S-287, CR-078/ADR-60): the no-network fitness
# function that used to guard the DEFAULT tree now moves to guarding the SLIM
# tree instead (`--no-default-features --features lang-all`, S-288) — a plain
# `cargo build`/`cargo install` ships the dashboard, and the offline-by-default
# invariant (NFR-SE-01) is enforced over the slim build rather than this one.
default   = ["lang-all", "ui"]
# The `web?/lang-*` weak-forward lines reach the web adapter's logos-core path
# only when the `ui` feature has pulled it in, keeping the grammar set unified
# across every seam (the mcp pattern, extended to the third adapter, CR-012).
lang-rust = ["logos-core/lang-rust", "mcp/lang-rust", "web?/lang-rust"]
lang-all  = ["logos-core/lang-all", "mcp/lang-all", "web?/lang-all"]
# CR-012/ADR-27, re-layered by CR-078/ADR-60: the localhost web UI. Enabling it
# links the axum web surface into the binary (`serve --ui`/`--port`); since
# CR-078/ADR-60 it is default and egress-free — it carries NO agent crate and
# NO `rig`/`reqwest` egress client (those live behind `agents`). The slim,
# listener-free build stays reachable via `--no-default-features --features
# lang-all` (no `--ui`, no axum/hyper in the dependency tree, NFR-SE-01).
ui        = ["dep:web"]
# CR-078/ADR-60: the consent-gated LLM egress surface. A strict SUPERSET of `ui`
# — it turns on the dashboard AND the chat + in-app wiki-generation agent surface
# (and, through `web/agents`, `rig` + its `reqwest` HTTP client). `--features ui`
# alone stays egress-free; `--features agents` restores today's full dashboard.
# Release artifacts enable `agents` via the cargo-dist metadata (S-287) so the
# shipped binary keeps chat/wiki generation. Egress remains user-initiated and
# consent-gated at runtime (ADR-40) — this feature only gates compilation.
agents    = ["ui", "web/agents"]

[dependencies]
logos-core = { path = "../logos-core", default-features = false }
# The rmcp stdio server behind `logos serve --mcp` (S-017 service contract:
# the serve arm calls `mcp::serve_stdio(root)` and maps Err → exit 3). Grammar
# features stay controlled by this crate's feature lines above.
mcp        = { path = "../mcp", default-features = false }
# The feature-gated web adapter (CR-012, ADR-27) — optional, behind `ui`, which
# is default since S-287 (CR-078/ADR-60). It is now part of the default-feature
# dependency tree; the offline-by-default no-network fitness function moved to
# guard the slim tree instead (`--no-default-features --features lang-all`,
# S-288), the same scope cargo-deny's default-features graph now covers.
web        = { path = "../web", default-features = false, optional = true }
anyhow     = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# End-to-end binary tests (tests/cli_surface.rs and the S-019 binary-level
# stdout-safety test, NFR-RA-01): throwaway project fixtures — dev-only,
# never enters the shipped binary graph.
tempfile   = { workspace = true }
